Corrección de errores ortográficos

--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -16,7 +16,7 @@ En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando 
 Abra la imagen \begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
 \end{center} seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación color real que utiliza las bandas \emph{rojo (B4)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
 
-En esta combinación las características del suelo aparecen en colores similares a su apariencia para el sistema visual humano, la vegetación sana se observa en tonalidades de verde, suelos recientemente cosechados o compactados se observan brillantes, en tanto que la vegetación senescente o de escasa cobertura se observa en tonos de marrón y amarillo. Por otro lado, esta combinación de bandas presenta mayor respuesta a cuerpos de agua, resaltando características como sedimentos, profundidad o presencia de floraciones algales.
+En esta combinación, las características del suelo aparecen en colores similares a su apariencia para el sistema visual humano. Es así que la vegetación sana se observa en tonalidades de verde, los suelos recientemente cosechados o compactados se observan brillantes, en tanto que la vegetación senescente o de escasa cobertura se observa en tonos de marrón y amarillo. Por otro lado, esta combinación de bandas presenta mayor respuesta a cuerpos de agua, resaltando características como sedimentos, profundidad o presencia de floraciones algales.
 
 Utilice el mapa con puntos de interés para identificar y familiarizarse con los diferentes usos y coberturas (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
@@ -26,7 +26,7 @@ Utilice el mapa con puntos de interés para identificar y familiarizarse con los
 
 Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
 
-En esta combinación la vegetación aparece en tonos de rojo y magenta, las áreas urbanas se pueden observar en tonos de cian y los suelos varían en tonos de verde. El agua en tonos de azul. La vegetación leñosa (bosques) puede observarse en tonos rojizos en tanto que la vegetación herbácea (pastizales y cultivos) puede observarse en magenta. Esta combinación es útil para estudios de vegetación ya que resalta la relación entre el infrarrojo cercano y el rojo. Las áreas urbanas densamente pobladas se muestran en azul claro.
+En esta combinación, la vegetación aparece en tonos de rojo y magenta, las áreas urbanas se pueden observar en tonos de cian y los suelos varían en tonos de verde. El agua, por su parte, varía en tonos de azul. La vegetación leñosa (bosques) puede observarse en tonos rojizos en tanto que la vegetación herbácea (pastizales y cultivos) puede observarse en magenta. Esta combinación es útil para estudios de vegetación ya que resalta la relación entre el infrarrojo cercano y el rojo. Las áreas urbanas densamente pobladas se muestran en azul claro.
 
 Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
@@ -35,7 +35,7 @@ Utilice el mapa con puntos de interés para identificar diferentes tipos de vege
 
 Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
 
-La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden estar en verdes y marrones, las áreas urbanas pueden observarse en blanco y cian, las áreas de color azul intenso representan suelos sin cobertura vegetal y las áreas color rosa muestran vegetación en crecimiento . El agua clara y profunda se observa oscura; si el agua es poco profunda o contiene sedimentos, aparecería como tonos de azul más claro. Para estudios de vegetación, la adición de la banda del infrarrojo de onda corta aumenta la sensibilidad para identificar stress hídrico y variaciones en el contenido de humedad en la vegetación y suelos.
+La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden estar en verdes y marrones, las áreas urbanas pueden observarse en blanco y cian, las áreas de color azul intenso representan suelos sin cobertura vegetal y las áreas color rosa muestran vegetación en crecimiento . El agua clara y profunda se observa oscura; si el agua es poco profunda o contiene sedimentos, aparecería como tonos de azul más claro. Para estudios de vegetación, la adición de la banda del infrarrojo de onda corta aumenta la sensibilidad para identificar estrés hídrico y variaciones en el contenido de humedad en la vegetación y suelos.
 
 Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
@@ -75,14 +75,14 @@ Identifique en el mapa (Figura \ref{fig:mapa}) un parche homogéneo de selva par
     \label{fig:selva}
 \end{figure}
 
-Para cambiar del Pin características como nombre o color ir a  \menu{View>Tool Windows>Pin Manager}. Seleccionar en la columna \menu{label} el nombre Pin 1 y cambiar por "selva paranaense". En la columna \menu{color} asignar el color deseado.
+Para cambiar del Pin características como nombre o color ir a \menu{View>Tool Windows>Pin Manager}. Seleccionar en la columna \menu{label} el nombre Pin 1 y cambiar por "selva paranaense". En la columna \menu{color} asignar el color deseado.
 
 \section{Visualización de firmas espectrales}
 
 Ahora procederemos a visualizar la firma espectral correspondiente al Pin creado. Seleccione \menu{Optical>Spectrum View}. Se desplegará el visor de firmas espectrales. Para visualizar el Pin creado, seleccione la herramienta \menu{Show spectra for all pins}
 
 
-Ahora procederemos a identificar y comparar firmas espectrales de diferentes usos y coberturas. Con la ayuda del mapa (Figura \ref{fig:mapa}) dentifique parches homogéneos de bosque implantado, cultivo, suelo sin cobertura vegetal y cuerpo de agua e inserte en cada uno de ellos un pin con la herramienta \menu{pin placing tool}. A medida que vaya generando cada pin, recuerde modificarle las caracteristicas con la herramienta  \menu{View>Tool Windows>Pin Manager}. A continuación visualice las firmas correspondientes a los pins generados utilizando la herramienta \menu{Optical>Spectrum View}.
+Ahora procederemos a identificar y comparar firmas espectrales de diferentes usos y coberturas. Con la ayuda del mapa (Figura \ref{fig:mapa}) identifique parches homogéneos de bosque implantado, cultivo, suelo sin cobertura vegetal y cuerpo de agua e inserte en cada uno de ellos un pin con la herramienta \menu{pin placing tool}. A medida que vaya generando cada pin, recuerde modificarle las caracteristicas con la herramienta  \menu{View>Tool Windows>Pin Manager}. A continuación visualice las firmas correspondientes a los pins generados utilizando la herramienta \menu{Optical>Spectrum View}.
 
 \begin{figure}[h!]
     \centering
@@ -93,14 +93,14 @@ Ahora procederemos a identificar y comparar firmas espectrales de diferentes uso
 
 \section{Actividad práctica}
 \begin{enumerate}
-  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
+  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección del río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
   \begin{enumerate}
   \item Compare color y tono de los ríos Paraná e Iguazú. En base a interpretación visual ¿Que combinación considera la más adecuada para identificar sedimentos? ¿Cuál  considera que tiene mayor concentración de sedimentos?
   \item  Desplácese hasta Puerto Iguazú (\ref{fig:mapa} punto de referencia 11) y analice el área urbana. ¿En qué combinación puede ver con mayor nitidez la red víal?
-  \item  Identifique el emblase Urugua-í (\ref{fig:mapa} punto de referencia 6) y compare presencia de sedimentos con los ríos Paraná y Iguazú. ¿Cuál de ellos presenta menor concentración de sedimentos?
+  \item  Identifique el embalse Urugua-í (\ref{fig:mapa} punto de referencia 6) y compare la presencia de sedimentos con los ríos Paraná y Iguazú. ¿Cuál de ellos presenta menor concentración de sedimentos?
 \end{enumerate}
 
-  \item Identifique en el mapa de referencia los puntos 1 y 4 correspondientes a Selva Paraense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
+  \item Identifique en el mapa de referencia los puntos 1 y 4 correspondientes a Selva Paranaense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
   \begin{enumerate}
     \item  Compare color y tono de la selva paranaense y el bosque implantado para color natural.
     \item  Compare color y tono de la selva paranaense y el bosque implantado para infrarrojo color.
