Cambio en redaccion de 1 parrafo de subset
esto:
Es posible hacer un subset, tanto espacial como espectral, de la imagen. Esto es de utilidad para trabajar solo con nuestra región de interés reduciendo el tamaño de la imagen y por lo tanto los tiempos de procesamiento.

Por esto:
Para trabajar solo con nuestra región de interés reduciendo el tamaño de la imagen y por
lo tanto los tiempos de procesamiento, es posible hacer un subset, tanto espacial como espectral, de la imagen.
Ademas agregué en ese párrafo la palabra recorte como sinónimo de subset.

--- a/Nivel1-A/Documentos/Guia/guia3.tex
+++ b/Nivel1-A/Documentos/Guia/guia3.tex
@@ -132,7 +132,8 @@ Edite los campos \emph{Name} con el valor \texttt{ca} y el campo \emph{Spectral 
 Para guardar los cambios realizados en la imagen haga click derecho sobre ella y elija \menu{Save product}.
 
 \section{Subset espacial y espectral}
-Es posible hacer un subset, tanto espacial como espectral, de la imagen. Esto es de utilidad para trabajar solo con nuestra región de interés reduciendo el tamaño de la imagen y por lo tanto los tiempos de procesamiento.
+Para trabajar solo con nuestra región de interés reduciendo el tamaño de la imagen y por
+lo tanto los tiempos de procesamiento, es posible hacer un recorte o subset, tanto espacial como espectral, de la imagen.
 
 Para hacerlo, seleccione la imagen apilada y diríjase a \menu{Raster > Subset}. En la pestaña \menu{Spatial subset} seleccione la pestaña \menu{Geo Coordinates} (Figura \ref{fig:subset}).
 
