guía dos a clase 2
\item Grafique las firmas espectrales utilizando las herramientas de la (cambié de la guía dos a clase 2) y analice para cada cobertura la relación entre infrarrojo cercano y rojo.

--- a/Nivel1-A/Documentos/Guia/guia4.tex
+++ b/Nivel1-A/Documentos/Guia/guia4.tex
@@ -118,7 +118,7 @@ En primer lugar crearemos polígonos para calcular sobre una parche las estadís
     \item Un parche homogéneo de suelo sin cobertura vegetal que se observa en marrón oscuro (cultivo en descanso).
     \item El embalse Urugua-í
     \item Vuelque los valores en una tabla y compare. ¿En qué tipo de coberturas encuentra los valores más altos? ¿Los más bajos? ¿Qué significado tiene los valores negativos?
-    \item Grafique las firmas espectrales utilizando las herramientas de la guía dos y analice para cada cobertura la relación entre infrarrojo cercano y rojo.
+    \item Grafique las firmas espectrales utilizando las herramientas de la clase 2 y analice para cada cobertura la relación entre infrarrojo cercano y rojo.
   \end{enumerate}
 
 
