cambios en redacción de párrafos (ver descripción)
en sección 6.2 cambié esto:
El objetivo de esta aplicación es detectar zonas cubiertas por nieve y hielo tanto que varien periodicamente como de forma permanente en la zona de Cerro de la Majadita, San Juan, Argentina.

por esto: El objetivo de esta aplicación es detectar zonas cubiertas por nieve y hielo, con variación tanto periódica como permanente, en la zona de Cerro de la Majadita, San Juan, Argentina.

en aplicaciones incendios quité el párrafo inicial :
Lago Cholila, Chubut, Argentina
11/Abril/2015
21/Enero/2015

debajo en esa seccion decía
\item Calcule un índice de nieve para cada una de las escenas. 
Lo cambié por indice de área quemada...

--- a/Nivel1-A/Documentos/Guia/guia6.tex
+++ b/Nivel1-A/Documentos/Guia/guia6.tex
@@ -45,7 +45,7 @@ D         & Zonas donde disminuyo el NDVI.        & \textcolor{P3}{$\blacksquare
 
 \section{Detección de glaciares en Cuyo}
 
-El objetivo de esta aplicación es detectar zonas cubiertas por nieve y hielo tanto que varien periodicamente como de forma permanente en la zona de Cerro de la Majadita, San Juan, Argentina.
+El objetivo de esta aplicación es detectar zonas cubiertas por nieve y hielo, con variación tanto periódica como permanente, en la zona de Cerro de la Majadita, San Juan, Argentina.
 
 Para hacerlo, siga los siguientes pasos:
 
@@ -100,10 +100,6 @@ Valor  & \multicolumn{1}{c}{Definición}   & \multicolumn{1}{c}{Color}          
 
 \section{Incendios en la patagonia}
 
-Lago Cholila, Chubut, Argentina
-11/Abril/2015
-21/Enero/2015
-
 El objetivo de esta aplicación es detectar zonas afectadas durante los incendios en Lago Cholila, Chubut, Argentina durante los meses de febrero, marzo y abril de 2015.
 
 Para hacerlo, siga los siguientes pasos:
@@ -122,7 +118,7 @@ Para hacerlo, siga los siguientes pasos:
 
 Para ambas modifique los nombres de las bandas y las longitudes de onda de cada una según la tabla del apéndice ap:satelites.
 
-\item Calcule un índice de nieve para cada una de las escenas. Nombrelos \texttt{nbr\_pre} y \texttt{nbr\_pos}. La formula a utilizar es
+\item Calcule un índice de área quemada para cada una de las escenas. Nombrelos \texttt{nbr\_pre} y \texttt{nbr\_pos}. La formula a utilizar es
 
 \begin{verbatim}
 (nir-swir2)/(nir+swir2)
