--- a/Nivel1-A/Documentos/Guia/apendice1.tex
+++ b/Nivel1-A/Documentos/Guia/apendice1.tex
@@ -1,11 +1,11 @@
 \chapter{Google earth}\label{ap:GE}
 
-Es posible utilizar el \href{https://www.google.com/earth/desktop/}{Google Earth Pro} como herramienta de GIS para analizar los resultados obtenidos(Figura \ref{fig:gearth}). Para ello es necesario exporar la vista como KMZ y luego abrirla en Google Earth.
+Es posible utilizar el \href{https://www.google.com/earth/desktop/}{Google Earth Pro} como herramienta de GIS para analizar los resultados obtenidos(Figura \ref{fig:gearth}). Para ello es necesario exportar la vista como KMZ y luego abrirla en Google Earth.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.7\textwidth]{fig:gearth.png}
-    \caption{Imagen óptica de Ushuahia desplegada en Google Earth}
+    \caption{Imagen óptica de Ushuaia desplegada en Google Earth}
     \label{fig:gearth}
 \end{figure}
 
@@ -15,8 +15,8 @@ Es posible exportar la visualización de la imagen completa o de una región esp
 
 Para realizar este proceso la imagen debe encontrarse proyectada en coordenadas geográficas (Apéndice \ref{ap:HA}) y solo se exportará la vista de la pantalla.
 
-\section{Google earth}
+\section{Google Earth}
 
-Al ajecutar Google Earth se encontrara con una vista del mundo. Para abrir un archivo \directory{.kmz} dirijasé a \menu{File>Open...}. Seleccione el archivo que exporto del \emph{SNAP} y Google Earth se desplazará automaticamente hasta donde se encuentra el archivo (Figura \ref{fig:gearth}).
+Al ejecutar Google Earth se encontrará con una vista del mundo. Para abrir un archivo \directory{.kmz} diríjase a \menu{File>Open...}. Seleccione el archivo que exporto del \emph{SNAP} y Google Earth se desplazará automáticamente hasta donde se encuentra el archivo (Figura \ref{fig:gearth}).
 
-Es posible mostrar distintas coberturas seleccionandolas de la sección \menu{Places} a la derecha de la pantalla.
+Es posible mostrar distintas coberturas seleccionándolas de la sección \menu{Places} a la derecha de la pantalla.
