Cambios en redacción del primer párrafo de la guia
Cambie el párrafo original:
El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y firma espectral \emph{SNAP (Sentinel Aplication Toolbox)}. Se realizará diferentes combinaciones de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la combinación de colores. Respuesta espectral de usos y coberturas.

por este:
El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y
firma espectral (utilizando nuevamente el software SNAP) (quitaría Sentinel Aplication Toolbox ya que la primera vez que fue nombrado ya describiste la sigla). Se realizará(n) diferentes combinaciones
de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la
combinación de colores.

--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -1,6 +1,6 @@
 \chapter{Principios físicos}
 
-El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y firma espectral \emph{SNAP (Sentinel Aplication Toolbox)}. Se realizará diferentes combinaciones de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la combinación de colores. Respuesta espectral de usos y coberturas.
+El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y firma espectral, utilizando nuevamente el software SNAP. Se realizarán diferentes combinaciones de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la combinación de colores. 
 
 
 
