redacción párrafo inicial de com bandas creacion subsecc
Cambie esto:
En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando la variación en la visualización de los diferentes usos y coberturas.
Por esto:
2.1 Combinación de bandas: En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando (en la visualización, la variación) de los diferentes usos y coberturas (del suelo y la vegetación en la imagen/escena

Hice subsecciones
2.1.1 combinación color real.
2.1.2 combinación infrarrojo color
2.1.3 combinación vegetación sana

--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -7,11 +7,11 @@ El objetivo de esta clase es familiarizarze con los conceptos de combinación de
 
 
 \section{Combinación de bandas}
-En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando la variación en la visualización de los diferentes usos y coberturas.
+En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando en la visualización, la variación de los diferentes usos y coberturas del suelo y la vegetación en la imagen/escena.
 
 %desarrollar un poco
 
-\section{Combinación color real}\label{sec:colorreal}
+\subsection{Combinación color real}\label{sec:colorreal}
 
 Abra la imagen \begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
 \end{center} seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación color real que utiliza las bandas \emph{rojo (B4)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
@@ -21,7 +21,7 @@ En esta combinación, las características del suelo aparecen en colores similar
 Utilice el mapa con puntos de interés para identificar y familiarizarse con los diferentes usos y coberturas (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
 
-\section{Combinación infrarrojo color}
+\subsection{Combinación infrarrojo color}
 \label{sec:infrarrojocolor}
 
 Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
@@ -30,7 +30,7 @@ En esta combinación, la vegetación aparece en tonos de rojo y magenta, las ár
 
 Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
 
-\section{Combinación vegetación sana}
+\subsection{Combinación vegetación sana}
 \label{sec:vegetacionsana}
 
 Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
