--- a/Nivel1-A/Documentos/Guia/guia1.tex
+++ b/Nivel1-A/Documentos/Guia/guia1.tex
@@ -104,7 +104,7 @@ Mida la longitud de la pista de aterrizaje del aeropuerto de cataratas del Iguaz
 
 \section{Consulta de píxel}
 
-Para obtener información sobre un pixel seleccione la pestaña \menu{Pixel info}, junto al \menu{Product explorer} (Figura \ref{fig:pixel}), y posiciónese sobre uno en la imagen.
+Para obtener información sobre un pixel seleccione la pestaña \menu{Pixel info}, junto al \menu{Product explorer} (Figura \ref{fig:pixel}), y posiciónese sobre un pixel en la imagen.
 
 \begin{figure}[h!]
     \centering
