Corrección de errores ortográficos 'n add 2017 Hur maria

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -16,8 +16,8 @@
 \begin{block}{Sensores y plataformas}
   Cuando hablamos adquisición de imágenes satelitales hablamos de dos componentes fundamentales:
   \begin{itemize}
-    \item El \emph{Sensor} que toma la imagen.
-    \item La \emph{Plataforma} que transporta al sensor
+    \item El \emph{Sensor}, que toma la imagen.
+    \item La \emph{Plataforma}, que transporta al sensor
   \end{itemize}
 \end{block}
 
@@ -47,7 +47,7 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
-  Algunos ejeplos de plataformas y sensores pasivos son
+  Algunos ejemplos de plataformas y sensores pasivos son:
   \begin{itemize}
     \item<1->{Landsat 5 - TM}
     \item<3-> Landsat 7 - ETM
@@ -67,8 +67,8 @@
 \begin{block}{Clasificación de órbitas}
    Una órbita es el camino que recorre un cuerpo en el espacio. Las dos más importantes para teledetección son:
    \begin{itemize}
-     \item \emph{Polares}: Orbitando en torno a la tierra en dirección norte-sur o sur-norte.
-     \item \emph{Geoestacionarias}: Orbitando a la tierra mirando siempre al mismo punto.
+     \item \emph{Polares}: Orbitando en torno a la Tierra, en dirección norte-sur o sur-norte.
+     \item \emph{Geoestacionarias}: Orbitando a la Tierra, mirando siempre al mismo punto.
    \end{itemize}
 \end{block}}
 \end{frame}
@@ -210,7 +210,7 @@
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-beg.jpeg}
-        \caption{Evolución temporal del contenido de clorofila en superficie en el lago San Roque. Imagen del 12 de febrero de 2017.}
+        \caption{Evolución temporal del contenido de clorofila en la superficie en el lago San Roque, en la provincia de Córdoba. Imagen del 12 de febrero de 2017.}
         \label{fig:lake-beg}
     \end{figure}
 \end{frame}
@@ -220,7 +220,7 @@
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-end.jpeg}
-        \caption{Evolución temporal del contenido de clorofila en superficie en el lago San Roque. Imagen del 22 de febrero de 2017.}
+        \caption{Evolución temporal del contenido de clorofila en la superficie en el lago San Roque. Imagen del 22 de febrero de 2017.}
         \label{fig:lake-end}
     \end{figure}
 \end{frame}
@@ -230,7 +230,7 @@
     \begin{figure}[h!]
         \centering
         \includegraphics[width=0.6\textwidth]{fig:lake-aft.jpeg}
-        \caption{Evolución temporal del contenido de clorofila en superficie en el lago San Roque. Imagen del 14 de marzo de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
+        \caption{Evolución temporal del contenido de clorofila en la superficie en el lago San Roque. Imagen del 14 de marzo de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
         \label{fig:lake-aft}
     \end{figure}
 \end{frame}
@@ -240,7 +240,7 @@
     \begin{figure}[h!]
     \centering
     \movie[width = 0.6 \textwidth,loop]{\centering\includegraphics[width=0.6\textwidth]{fig:maria.png}}{./figs/fig:maria.mp4}
-    \caption{Evolución del huracán María en el mes de septiembre. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
+    \caption{Evolución del huracán María en el mes de septiembre de 2017. (\href{https://goo.gl/M5595z}{https://goo.gl/M5595z}).}
     \end{figure}
 \end{frame}
 %--- Next Frame ---%
