Corr errores ortográficos

--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -103,7 +103,7 @@
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
-        En función de las radiancas podemos definir la absorvancia, la transmitancia y la reflectancia como
+        En función de las radiancias podemos definir la absorvancia, la transmitancia y la reflectancia como:
         \begin{equation}
           A_\lambda = \frac{L_{a,\lambda}}{L_{0,\lambda}} ,
         \end{equation}
@@ -133,7 +133,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:v.png}
-    \caption{Firmas espectral de la vegetación.}
+    \caption{Firma espectral de la vegetación.}
     \label{}
   \end{figure}
 \end{frame}
@@ -143,7 +143,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:a.png}
-    \caption{Firmas espectral de la agua.}
+    \caption{Firma espectral de la agua.}
     \label{}
   \end{figure}
 \end{frame}
@@ -153,7 +153,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:s.png}
-    \caption{Firmas espectral de la suelo.}
+    \caption{Firma espectral de la suelo.}
     \label{}
   \end{figure}
 \end{frame}
@@ -163,7 +163,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:spec.png}
-    \caption{Comparación de firmas espectrales..}
+    \caption{Comparación de las tres firmas espectrales.}
     \label{}
   \end{figure}
 \end{frame}
