Corr Error Ortográfico

--- a/Nivel1-A/Documentos/Videos/clase3.tex
+++ b/Nivel1-A/Documentos/Videos/clase3.tex
@@ -129,7 +129,7 @@
 
 \begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
-        En la capacidad de distinguir cambios en la radiancia que proviene de un píxel y como esta se cuantifica.
+        En la capacidad de distinguir cambios en la radiancia que proviene de un píxel y como ésta se cuantifica.
     \end{block}
 \end{frame}
 %--- Next Frame ---%
