Corr Error ortográfico

--- a/Nivel1-A/Documentos/Videos/clase4.tex
+++ b/Nivel1-A/Documentos/Videos/clase4.tex
@@ -15,7 +15,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{fig:firmavar.png}
-    \caption{Variacion de la firam espectral según porcentaje de cobertura de vegetación.}
+    \caption{Variación de la firma espectral según porcentaje de cobertura de vegetación.}
     \label{}
   \end{figure}
 \end{frame}
@@ -40,7 +40,7 @@
   \begin{equation}
     NDVI = \frac{\rho_{nir}-\rho_{red}}{\rho_{nir}+\rho_{red}}
   \end{equation}
-  con $\rho_{nir}$, $\rho_{red}$ las reflectancias en el infrarrojo cercano y el rojo.
+  con $\rho_{nir}$, $\rho_{red}$ las reflectancias en el infrarrojo cercano y el rojo, respectivamente.
 \end{block}
 \begin{block}{Observación}
     \begin{itemize}[<+->]
