Corr Error ortografico

--- a/Nivel1-A/Documentos/Videos/clase5.tex
+++ b/Nivel1-A/Documentos/Videos/clase5.tex
@@ -50,7 +50,7 @@
   \begin{block}{Esquema general de clasificación}
     \begin{center}
     \smartdiagramset{back arrow disabled=true,text width = 2.6cm,module x sep=3.75cm}
-    \smartdiagram[flow diagram:horizontal]{Información espectral, Algorítmo de clasificación, Clases de información}
+    \smartdiagram[flow diagram:horizontal]{Información espectral, Algoritmo de clasificación, Clases de información}
     \end{center}
   \end{block}
 \end{frame}
@@ -82,7 +82,7 @@
             additional item width=3cm,
             additional item text width=3cm,
         }}
-      \smartdiagramadd[flow diagram:horizontal]{Áreas de entrenamiento, Algorítmo de clasificación, Clases de información}
+      \smartdiagramadd[flow diagram:horizontal]{Áreas de entrenamiento, Algoritmo de clasificación, Clases de información}
       {above of module1/Información espectral,below of module1/Información del terreno}
     \end{center}
 \end{frame}
@@ -103,7 +103,7 @@
         additional item width=3cm,
         additional item text width=3cm,
     }}
-  \smartdiagramadd[flow diagram:horizontal]{Algorítmo de clasificación, Clases espectrales, Clases de información}
+  \smartdiagramadd[flow diagram:horizontal]{Algoritmo de clasificación, Clases espectrales, Clases de información}
   {above of module1/Información espectral,below of module2/Información del terreno}
   \end{center}
 \end{frame}
@@ -115,7 +115,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-black}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -125,7 +125,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-1}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -135,7 +135,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-2}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -145,7 +145,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-3}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -155,7 +155,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-4}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -165,7 +165,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{fig:cluster-10}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
@@ -177,7 +177,7 @@
     \subfloat[Clases de información]{\includegraphics[width=0.4\textwidth]{fig:cluster-info}\label{fig:kmeans2}}
     \hspace{1cm}
     \subfloat[Clasificación obtenida]{\includegraphics[width=0.4\textwidth]{fig:cluster-10} \label{fig:kmeans1}}
-    \caption{Clasificación por kmeans.}
+    \caption{Clasificación por k-means.}
     \label{}
   \end{figure}
 \end{frame}
