Errores ortográficos corr

--- a/Nivel1-A/Documentos/Videos/clase6.tex
+++ b/Nivel1-A/Documentos/Videos/clase6.tex
@@ -26,7 +26,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.55\textwidth]{fig:app-cambio.jpg}
-    \caption{Detección de un deslizamiento utilizando imágenes Landsat 8, Nepal. \emph{Fuete: Automating the Detection of Landslides, NASA, July 6, 2016}.}
+    \caption{Detección de un deslizamiento utilizando imágenes Landsat 8, Nepal. \emph{Fuente: Automating the Detection of Landslides, NASA, July 6, 2016}.}
     \label{}
   \end{figure}
 \end{frame}
@@ -36,7 +36,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{fig:app-turb.png}
-    \caption{Cálculo de turbidez para la zona del Rio de la Plata, Argentina/Uruguay. \emph{Fuente: CALIBRATION AND VALIDATION OF AN ALGORITHM FOR REMOTE SENSING OF TURBIDITY OVER LA PLATA RIVER ESTUARY, ARGENTINA}}
+    \caption{Cálculo de turbidez para la zona del Río de la Plata, Argentina/Uruguay. \emph{Fuente: CALIBRATION AND VALIDATION OF AN ALGORITHM FOR REMOTE SENSING OF TURBIDITY OVER LA PLATA RIVER ESTUARY, ARGENTINA}}
     \label{}
   \end{figure}
 \end{frame}
